--- a/app/views/days/index.slim
+++ b/app/views/days/index.slim
@@ -1,63 +1,70 @@
-section#tournment.about-section.text-center
-  .container
-    .row
-      .col-sm-8.mx-auto
-        .row.align-items-center
-          .col-sm-2.text-right
-            - if @season.id != 1
-              = link_to days_path(season_id: @season.id - 1) do
-                = image_tag "left.png", size: "100x100"
-          .col-sm-8.text-center
-            h2.text-white.mb-4 = @season.name
-            i = "#{@days.last.date.strftime("%d.%m.%Y")} - #{@days.first.date.strftime("%d.%m.%Y")}"
-          .col-sm-2.text-left
-            - if @season.id != Season.all_cached.last.id
-              = link_to days_path(season_id: @season.id + 1) do
-                = image_tag "right.png", size: "100x100"
-  .container
-    .row
-      table.table.table-dark.table-striped.table-bordered
-        tr
-          th.text-center
-          th.text-center 1-ое место
-          th.text-center 2-ое место
-          th.text-center 3-е место
-          th.text-center 4-ое место
-        - @teams.each do |team|
-          - next if @places.select { |p| [p[:first_place], p[:second_place], p[:third_place], p[:fourth_place]].include? team.id }.count.zero?
+section#parallax-pole.hero.is-large
+  .hero-body
+    .container
+      .columns.is-mobile
+        .column.is-3.is-right
+          - if @season.id != 1
+            = link_to days_path(season_id: @season.id - 1) do
+              = image_tag "left.png", size: "100x100"
+        .column.is-6.is-center
+          h1.title.is-1 = @season.name
+          hr.content-divider
+          h2.subtitle = "#{@days.last.date.strftime("%d.%m.%Y")} - #{@days.first.date.strftime("%d.%m.%Y")}"
+        .column.is-3.is-left
+          - if @season.id != Season.all_cached.last.id
+            = link_to days_path(season_id: @season.id + 1) do
+              = image_tag "right.png", size: "100x100"
+      .columns
+        .column.is-6.is-offset-3
+          .table-container
+            table.table.is-bordered
+              thead
+                tr
+                  th.is-center
+                  th.is-center 1 место
+                  th.is-center 2 место
+                  th.is-center 3 место
+                  th.is-center 4 место
+              - @teams.each do |team|
+                - next if @places.select { |p| [p[:first_place], p[:second_place], p[:third_place], p[:fourth_place]].include? team.id }.count.zero?
+                tr
+                  td.is-center = image_tag "colors/#{team.code}.png", size: '25x30'
+                  td.is-center = @places.select { |p| p[:first_place]  == team.id }.count
+                  td.is-center = @places.select { |p| p[:second_place] == team.id }.count
+                  td.is-center = @places.select { |p| p[:third_place]  == team.id }.count
+                  td.is-center = @places.select { |p| p[:fourth_place] == team.id }.count
+
+section#parallax-football.hero.is-large
+  .hero-body
+    .container
+      .columns
+        table.table.is-bordered
           tr
-            td.text-center = image_tag "colors/#{team.code}.png", size: "25x30"
-            td.text-center = @places.select { |p| p[:first_place]  == team.id }.count
-            td.text-center = @places.select { |p| p[:second_place] == team.id }.count
-            td.text-center = @places.select { |p| p[:third_place]  == team.id }.count
-            td.text-center = @places.select { |p| p[:fourth_place] == team.id }.count
-    .row
-      table.table.table-dark.table-striped.table-bordered
-        tr
-          th Дата
-          th 1-ое место
-          th 2-ое место
-          th 3-е место
-          th 4-е место
-          th Игроков
-          th Игр
-        - @days.each do |day|
-          tr
-            - g = day.games.to_a
-            td = link_to day.date.strftime('%d.%m.%Y %A'), day_path(day)
-            - array = [day.first_place, day.second_place, day.third_place]
-            - array.each do |place|
+            th Дата
+            th 1
+            th 2
+            th 3
+            th 4
+            th Игроков
+            th Игр
+          - @days.each do |day|
+            tr
+              - g = day.games.to_a
+              td = link_to l(day.date), day_path(day)
+              / td = link_to day.date.strftime('%d.%m.%Y %A'), day_path(day)
+              - array = [day.first_place, day.second_place, day.third_place]
+              - array.each do |place|
+                td
+                  - if place.present?
+                    = image_tag "colors/#{Team.cached_by_id[place].code}.png", size: '20x25'
+                    | &nbsp;
+                    = g.select { |x| x.team_left_id == place || x.team_right_id == place }.count
+              - dp = day.day_players_by_season(day.season_id)
               td
-                - if place.present?
-                  = image_tag "colors/#{Team.cached_by_id[place].code}.png", size: "20x25"
-                  | &nbsp;
-                  = g.select { |x| x.team_left_id == place || x.team_right_id == place }.count
-            - dp = day.day_players_by_season(day.season_id)
-            td
-              - if dp.group_by(&:team_id).count > 3
-                - (@teams.pluck(:id) - array).each do |t|
-                  = image_tag "colors/#{Team.cached_by_id[t].code}.png", size: "20x25"
-                  | &nbsp;
-                  = g.select { |x| x.team_left_id == t || x.team_right_id == t }.count
-            td = dp.count
-            td = g.size
+                - if dp.group_by(&:team_id).count > 3
+                  - (@teams.pluck(:id) - array).each do |t|
+                    = image_tag "colors/#{Team.cached_by_id[t].code}.png", size: '20x25'
+                    | &nbsp;
+                    = g.select { |x| x.team_left_id == t || x.team_right_id == t }.count
+              td = dp.count
+              td = g.size
