--- a/app/views/days/show.slim
+++ b/app/views/days/show.slim
@@ -81,7 +81,7 @@ section#parallax-pole.hero.is-large
         .columns.is-centered
           .column.has-text-centered class="footballka-#{Team.cached_by_id[team_id].code}"
             h2.subtitle = day_players.map(&:elo).sum.to_i / day_players.count
-            - day_players.each do |day_player|
+            - day_players.sort_by(&:elo).reverse.each do |day_player|
               - player = @players.find { |p| p[:id] == day_player.player_id }
               .columns.is-mobile
                 .column.is-3.has-text-centered
