--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -23,9 +23,7 @@ html
     meta property="og:image"        content="#{asset_path('og-image.png')}"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
     link rel="canonical"  href="https://#{ENV['HOST']}"
-    link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;800&display=swap"
-    / script crossorigin="anonymous" src="https://kit.fontawesome.com/15181efa86.js"
+    script src="https://kit.fontawesome.com/15181efa86.js"
 
   body
     = render 'layouts/header'
