--- a/app/views/days/show.slim
+++ b/app/views/days/show.slim
@@ -1,78 +1,78 @@
-section#parallax-football.hero.is-large
-  .hero-body
-    .container
-      .columns.is-mobile
-        .column.is-3.is-right
-          - if @day.id != 1
-            = link_to day_path(@day.id - 1, to: -1) do
-              = image_tag 'left.png', size: '100x100'
-        .column.is-6.is-center
-          h2.subtitle.is-1 = l(@day.date)
-        .column.is-3.is-left
-          - if @day.id != Day.last.id
-            = link_to day_path(@day.id + 1, to: 1) do
-              = image_tag 'right.png', size: '100x100'
-    .container
-      .row
-        table.table.has-text-white.is-bordered
-          tr
-            th Команда
-            th.text-center Матчи
-            th.text-center Победа
-            th.text-center Ничья
-            th.text-center Поражение
-            th.text-center Голов
-            th.text-center points per game
-          - @main_table.each do |table|
-            tr data-link='' data-toggle='modal' data-target="#gamesModalCenter_#{table[:team_code]}"
-              td.text-center = image_tag "colors/#{table[:team_code]}.png", size: '25x30'
-              td.text-center = table[:games_count]
-              td.text-center
-                = table[:win_count]
-                .small
-                  - if table[:opps_win]
-                    - table[:opps_win].sort.reverse.each do |code, count|
-                      div
-                        - count.count.times do
-                          = image_tag "colors/#{code}.png", size: '10x15'
-                          | &nbsp;
-              td.text-center
-                = table[:draw_count]
-                .small
-                  - if table[:opps_draw]
-                    - table[:opps_draw].sort.reverse.each do |code, count|
-                      div
-                        - count.count.times do
-                          = image_tag "colors/#{code}.png", size: '10x15'
-                          | &nbsp;
-              td.text-center
-                = table[:lose_count]
-                .small
-                  - if table[:opps_lose]
-                    - table[:opps_lose].sort.reverse.each do |code, count|
-                      div
-                        - count.count.times do
-                          = image_tag "colors/#{code}.png", size: '10x15'
-                          | &nbsp;
-              td.text-center = table[:goals]
-              td.text-center = table[:ppg]
-            .modal.fade aria-hidden="true" role="dialog" tabindex="-1" id="gamesModalCenter_#{table[:team_code]}"
-              .modal-dialog.modal-dialog-centered role="document"
-                .modal-content.text-black-50
-                  .modal-header
-                    h5.modal-title Сыгранные игры
-                    button.close aria-label="Close" data-dismiss="modal" type="button"
-                      span aria-hidden="true"  &times;
-                  .modal-body
-                    - {opps_win: 'Победы', opps_draw: 'Ничьи', opps_lose: 'Поражения'}.each do |key, value|
-                      - next if table[key].nil? || table[key].count.zero?
-                      .row
-                        .col-sm-3
-                          | #{value}:
-                        - table[key].each do |code, count|
-                          .col-sm-3
-                            = "#{count.count} x "
-                            = image_tag "colors/#{code}.png", size: '25x30'
+/ section#parallax-football.hero.is-large
+/   .hero-body
+/     .container
+/       .columns.is-mobile
+/         .column.is-3.is-right
+/           - if @day.id != 1
+/             = link_to day_path(@day.id - 1, to: -1) do
+/               = image_tag 'left.png', size: '100x100'
+/         .column.is-6.is-center
+/           h2.subtitle.is-1 = l(@day.date)
+/         .column.is-3.is-left
+/           - if @day.id != Day.last.id
+/             = link_to day_path(@day.id + 1, to: 1) do
+/               = image_tag 'right.png', size: '100x100'
+/     .container
+/       .row
+/         table.table.has-text-white.is-bordered
+/           tr
+/             th Команда
+/             th.text-center Матчи
+/             th.text-center Победа
+/             th.text-center Ничья
+/             th.text-center Поражение
+/             th.text-center Голов
+/             th.text-center points per game
+/           - @main_table.each do |table|
+/             tr data-link='' data-toggle='modal' data-target="#gamesModalCenter_#{table[:team_code]}"
+/               td.text-center = image_tag "colors/#{table[:team_code]}.png", size: '25x30'
+/               td.text-center = table[:games_count]
+/               td.text-center
+/                 = table[:win_count]
+/                 .small
+/                   - if table[:opps_win]
+/                     - table[:opps_win].sort.reverse.each do |code, count|
+/                       div
+/                         - count.count.times do
+/                           = image_tag "colors/#{code}.png", size: '10x15'
+/                           | &nbsp;
+/               td.text-center
+/                 = table[:draw_count]
+/                 .small
+/                   - if table[:opps_draw]
+/                     - table[:opps_draw].sort.reverse.each do |code, count|
+/                       div
+/                         - count.count.times do
+/                           = image_tag "colors/#{code}.png", size: '10x15'
+/                           | &nbsp;
+/               td.text-center
+/                 = table[:lose_count]
+/                 .small
+/                   - if table[:opps_lose]
+/                     - table[:opps_lose].sort.reverse.each do |code, count|
+/                       div
+/                         - count.count.times do
+/                           = image_tag "colors/#{code}.png", size: '10x15'
+/                           | &nbsp;
+/               td.text-center = table[:goals]
+/               td.text-center = table[:ppg]
+/             .modal.fade aria-hidden="true" role="dialog" tabindex="-1" id="gamesModalCenter_#{table[:team_code]}"
+/               .modal-dialog.modal-dialog-centered role="document"
+/                 .modal-content.text-black-50
+/                   .modal-header
+/                     h5.modal-title Сыгранные игры
+/                     button.close aria-label="Close" data-dismiss="modal" type="button"
+/                       span aria-hidden="true"  &times;
+/                   .modal-body
+/                     - {opps_win: 'Победы', opps_draw: 'Ничьи', opps_lose: 'Поражения'}.each do |key, value|
+/                       - next if table[key].nil? || table[key].count.zero?
+/                       .row
+/                         .col-sm-3
+/                           | #{value}:
+/                         - table[key].each do |code, count|
+/                           .col-sm-3
+/                             = "#{count.count} x "
+/                             = image_tag "colors/#{code}.png", size: '25x30'
 
 section#parallax-pole.hero.is-large
   .hero-body
@@ -80,23 +80,27 @@ section#parallax-pole.hero.is-large
       - @day.day_players_by_season(@day.season_id).group_by(&:team_id).sort.each do |team_id, day_players|
         .columns.is-centered
           .column.has-text-centered class="footballka-#{Team.cached_by_id[team_id].code}"
-            h2.subtitle = day_players.map(&:elo).sum.to_i / day_players.count
-            - day_players.sort_by(&:elo).reverse.each do |day_player|
-              - player = @players.find { |p| p[:id] == day_player.player_id }
-              .columns.is-mobile
-                .column.is-3.has-text-centered
-                .column.is-1.has-text-centered
-                  = day_player.elo.to_i
-                .column.is-2.has-text-centered
-                  = link_to player.name, player_path(player)
-                .column.is-4
-                  - if @player_goals[player.code]
-                    - @player_goals[player.code].times do
-                      | ⚽️
-                  - if @player_assists[player.code]
-                    - @player_assists[player.code].times do
-                      | 🦶
-                .column.is-2.has-text-centered
+            .columns.is-mobile
+              .column.is-4.has-text-centered
+              .column.is-4.has-text-centered
+                .content
+                  table.table-profile
+                    tr
+                      th colspan="3"
+                        h4.title.has-text-white = day_players.map(&:elo).sum.to_i / day_players.count
+                    - day_players.sort_by(&:elo).reverse.each do |day_player|
+                      - player = @players.find { |p| p[:id] == day_player.player_id }
+                      tr
+                        td = day_player.elo.to_i
+                        td = link_to player.name, player_path(player), class: 'has-text-white'
+                        td
+                          - if @player_goals[player.code]
+                            - @player_goals[player.code].times do
+                              | ⚽️
+                            - if @player_assists[player.code]
+                              - @player_assists[player.code].times do
+                                | 🦶
+              .column.is-4.has-text-centered
 
 section#parallax-computers.hero.is-large
   .hero-body
