--- a/app/views/days/about.slim
+++ b/app/views/days/about.slim
@@ -9,7 +9,7 @@ section#parallax-pole.hero.is-large
           h2.subtitle= "Ruby on Rails #{Rails::VERSION::STRING}"
           h2.subtitle= "Puma #{@gems["puma"].version}"
           h2.subtitle= "Stimulus #{@gems["stimulus-rails"].version}"
-          h2.subtitle= "Sprockets #{@gems["sprockets-rails"].version}"
+          h2.subtitle= "Propshaft #{@gems["propshaft"].version}"
           h2.subtitle= "Turbo #{@gems["turbo-rails"].version}"
           h2.subtitle= "PostgreSQL #{@gems["pg"].version}"
         .column.is-6
